[gd_scene load_steps=19 format=3 uid="uid://bru0ro37h0rbt"]

[ext_resource type="Shader" uid="uid://c3kjd10ln4c6b" path="res://scenes/world.gdshader" id="1_vjb58"]
[ext_resource type="Script" uid="uid://bsa6dt5qtyclu" path="res://scenes/water.gd" id="2_g3eks"]
[ext_resource type="Script" uid="uid://devemhu1swx16" path="res://scenes/menu.gd" id="2_vjb58"]
[ext_resource type="Script" uid="uid://d3cf3u1ll5xlv" path="res://scenes/world.gd" id="3_13sgg"]
[ext_resource type="Script" path="res://scenes/pidcontroller.gd" id="3_v86rl"]
[ext_resource type="Script" uid="uid://bmd6kgqdisbye" path="res://scenes/floater.gd" id="4_13sgg"]
[ext_resource type="PackedScene" uid="uid://5wx77pssi7ja" path="res://scenes/cruiser01.tscn" id="5_i6lef"]

[sub_resource type="PlaneMesh" id="PlaneMesh_70i5f"]
size = Vector2(1200, 1200)
subdivide_width = 120
subdivide_depth = 120

[sub_resource type="FastNoiseLite" id="FastNoiseLite_mj5lg"]
noise_type = 2
seed = 12
fractal_type = 2
fractal_octaves = 8
fractal_gain = 0.95
fractal_weighted_strength = 0.8

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_kpybi"]
width = 1024
height = 1024
seamless = true
noise = SubResource("FastNoiseLite_mj5lg")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ufwb2"]
render_priority = 0
shader = ExtResource("1_vjb58")
shader_parameter/water_color = Vector4(0.05, 0.17, 0.3, 0.3)
shader_parameter/deep_water_color = Vector4(0.03, 0.04, 0.13, 0.9)
shader_parameter/wave_a = Vector3(0.6, 0.1, 50)
shader_parameter/wave_a_dir = Vector2(0.215, 0.195)
shader_parameter/wave_b = Vector3(0.2, 0.2, 30)
shader_parameter/wave_b_dir = Vector2(0.3, 1)
shader_parameter/wave_c = Vector3(0.05, 0.2, 8)
shader_parameter/wave_c_dir = Vector2(2, 0.5)
shader_parameter/noise = SubResource("NoiseTexture2D_kpybi")
shader_parameter/foam_level = 0.4
shader_parameter/time = 0.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qhqgy"]
albedo_color = Color(0.811183, 0.957611, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_dqkch"]
radius = 2.951
height = 5.902

[sub_resource type="BoxShape3D" id="BoxShape3D_u8vuu"]
size = Vector3(2.73413, 1.57422, 23.9258)

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_3vyb7"]

[sub_resource type="Sky" id="Sky_4wyf3"]
sky_material = SubResource("ProceduralSkyMaterial_3vyb7")

[sub_resource type="Environment" id="Environment_g2els"]
background_mode = 2
sky = SubResource("Sky_4wyf3")

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_v86rl"]

[node name="Menu" type="Node"]

[node name="World" type="Node3D" parent="." node_paths=PackedStringArray("water")]
script = ExtResource("3_13sgg")
water = NodePath("water")

[node name="water" type="MeshInstance3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0199623, 0.15757, -0.00815582)
mesh = SubResource("PlaneMesh_70i5f")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("ShaderMaterial_ufwb2")
script = ExtResource("2_g3eks")

[node name="Player" type="RigidBody3D" parent="World"]
transform = Transform3D(-0.96177, 0, -0.273858, 0, 1, 0, 0.273858, 0, -0.96177, -0.851392, 0, -0.534391)
gravity_scale = 0.0
inertia = Vector3(50, 50, 50)
angular_damp_mode = 1
angular_damp = 20.0
metadata/_edit_vertical_guides_ = [576.0]

[node name="PIDController_X" type="Node" parent="World/Player"]
script = ExtResource("3_v86rl")
proportional_gain = 3.0
derivative_gain = 8.0
output_min = -200.0
output_max = 200.0

[node name="PIDController_Z" type="Node" parent="World/Player"]
script = ExtResource("3_v86rl")
proportional_gain = 3.0
integral_gain = 2.0
derivative_gain = 2.0
output_min = -200.0
output_max = 200.0

[node name="Floaters" type="Node3D" parent="World/Player"]

[node name="Floater" type="Node3D" parent="World/Player/Floaters"]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, -12.6141)
script = ExtResource("4_13sgg")
water_drag = 0.98
water_angular_drag = 0.2
force_multiplier = 1.8

[node name="Marker" type="MeshInstance3D" parent="World/Player/Floaters/Floater"]
material_override = SubResource("StandardMaterial3D_qhqgy")
mesh = SubResource("SphereMesh_dqkch")

[node name="Floater2" type="Node3D" parent="World/Player/Floaters"]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 2.5, 0, 0)
script = ExtResource("4_13sgg")
water_drag = 0.98
water_angular_drag = 0.2
force_multiplier = 1.8

[node name="Marker" type="MeshInstance3D" parent="World/Player/Floaters/Floater2"]
material_override = SubResource("StandardMaterial3D_qhqgy")
mesh = SubResource("SphereMesh_dqkch")
skeleton = NodePath("../../Floater")

[node name="Floater3" type="Node3D" parent="World/Player/Floaters"]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, -2.5, 0, 0)
script = ExtResource("4_13sgg")
water_drag = 0.98
water_angular_drag = 0.2
force_multiplier = 1.8

[node name="Marker" type="MeshInstance3D" parent="World/Player/Floaters/Floater3"]
material_override = SubResource("StandardMaterial3D_qhqgy")
mesh = SubResource("SphereMesh_dqkch")

[node name="Floater5" type="Node3D" parent="World/Player/Floaters"]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 2, 0, -8)
script = ExtResource("4_13sgg")
water_drag = 0.98
water_angular_drag = 0.2
force_multiplier = 1.8

[node name="Marker" type="MeshInstance3D" parent="World/Player/Floaters/Floater5"]
material_override = SubResource("StandardMaterial3D_qhqgy")
mesh = SubResource("SphereMesh_dqkch")
skeleton = NodePath("../../Floater")

[node name="Floater6" type="Node3D" parent="World/Player/Floaters"]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, -2, 0, -8)
script = ExtResource("4_13sgg")
water_drag = 0.98
water_angular_drag = 0.2
force_multiplier = 1.8

[node name="Marker" type="MeshInstance3D" parent="World/Player/Floaters/Floater6"]
material_override = SubResource("StandardMaterial3D_qhqgy")
mesh = SubResource("SphereMesh_dqkch")

[node name="Floater7" type="Node3D" parent="World/Player/Floaters"]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 2, 0, 8)
script = ExtResource("4_13sgg")
water_drag = 0.98
water_angular_drag = 0.2
force_multiplier = 1.8

[node name="Marker" type="MeshInstance3D" parent="World/Player/Floaters/Floater7"]
material_override = SubResource("StandardMaterial3D_qhqgy")
mesh = SubResource("SphereMesh_dqkch")
skeleton = NodePath("../../Floater")

[node name="Floater8" type="Node3D" parent="World/Player/Floaters"]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, -2, 0, 8)
script = ExtResource("4_13sgg")
water_drag = 0.98
water_angular_drag = 0.2
force_multiplier = 1.8

[node name="Marker" type="MeshInstance3D" parent="World/Player/Floaters/Floater8"]
material_override = SubResource("StandardMaterial3D_qhqgy")
mesh = SubResource("SphereMesh_dqkch")

[node name="Floater4" type="Node3D" parent="World/Player/Floaters"]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 13.1902)
script = ExtResource("4_13sgg")
water_drag = 0.98
water_angular_drag = 0.2
force_multiplier = 1.8

[node name="Marker" type="MeshInstance3D" parent="World/Player/Floaters/Floater4"]
material_override = SubResource("StandardMaterial3D_qhqgy")
mesh = SubResource("SphereMesh_dqkch")

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.282017, 0)
shape = SubResource("BoxShape3D_u8vuu")

[node name="cruiser02" parent="World/Player" instance=ExtResource("5_i6lef")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0.864423)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="World"]
transform = Transform3D(-0.520011, -0.393868, -0.757929, -0.206453, -0.803072, 0.558974, -0.828834, 0.447149, 0.336291, 0, 2.78665, 0)
shadow_enabled = true
directional_shadow_max_distance = 500.0

[node name="Camera3D" type="Camera3D" parent="World"]
transform = Transform3D(-0.116359, 0.117359, 0.986249, 0, 0.992994, -0.118162, -0.993207, -0.0137492, -0.115544, 13.9596, 6.88571, -14.0626)
top_level = true
environment = SubResource("Environment_g2els")
current = true
fov = 80.0

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_vjb58")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="UI"]
replication_config = SubResource("SceneReplicationConfig_v86rl")

[node name="MainMenu" type="PanelContainer" parent="UI"]
layout_mode = 0
offset_left = 515.0
offset_top = 173.0
offset_right = 765.0
offset_bottom = 304.0

[node name="VBox" type="VBoxContainer" parent="UI/MainMenu"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Title" type="Label" parent="UI/MainMenu/VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "bubbelspel"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HostGame" type="Button" parent="UI/MainMenu/VBox"]
layout_mode = 2
text = " Host game "

[node name="JoinGame" type="Button" parent="UI/MainMenu/VBox"]
layout_mode = 2
text = " Join game "

[node name="HostGame" type="PanelContainer" parent="UI"]
visible = false
layout_mode = 0
offset_left = 515.0
offset_top = 173.0
offset_right = 765.0
offset_bottom = 446.0

[node name="Control" type="Control" parent="UI/HostGame"]
layout_mode = 2

[node name="Back" type="Button" parent="UI/HostGame/Control"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 53.0
offset_bottom = 39.0
text = "Back"

[node name="VBox" type="VBoxContainer" parent="UI/HostGame"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Title" type="Label" parent="UI/HostGame/VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Host game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerNameLabel" type="Label" parent="UI/HostGame/VBox"]
layout_mode = 2
text = "Player name:"

[node name="PlayerName" type="TextEdit" parent="UI/HostGame/VBox"]
custom_minimum_size = Vector2(150, 36)
layout_mode = 2
placeholder_text = "Enter here"
emoji_menu_enabled = false

[node name="PortLabel" type="Label" parent="UI/HostGame/VBox"]
layout_mode = 2
text = "Port:"

[node name="Port" type="TextEdit" parent="UI/HostGame/VBox"]
custom_minimum_size = Vector2(150, 36)
layout_mode = 2
text = "9752"
placeholder_text = "Enter here"
emoji_menu_enabled = false

[node name="Separator" type="Control" parent="UI/HostGame/VBox"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Host" type="Button" parent="UI/HostGame/VBox"]
layout_mode = 2
disabled = true
text = "Host"

[node name="ErrorLabel" type="Label" parent="UI/HostGame/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)

[node name="JoinGame" type="PanelContainer" parent="UI"]
visible = false
layout_mode = 0
offset_left = 515.0
offset_top = 173.0
offset_right = 765.0
offset_bottom = 446.0

[node name="Control" type="Control" parent="UI/JoinGame"]
layout_mode = 2

[node name="Back" type="Button" parent="UI/JoinGame/Control"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 53.0
offset_bottom = 39.0
text = "Back"

[node name="VBox" type="VBoxContainer" parent="UI/JoinGame"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Title" type="Label" parent="UI/JoinGame/VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Join game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerNameLabel" type="Label" parent="UI/JoinGame/VBox"]
layout_mode = 2
text = "Player name:"

[node name="PlayerName" type="TextEdit" parent="UI/JoinGame/VBox"]
custom_minimum_size = Vector2(150, 36)
layout_mode = 2
placeholder_text = "Enter here"
emoji_menu_enabled = false

[node name="AddressLabel" type="Label" parent="UI/JoinGame/VBox"]
layout_mode = 2
text = "Address:"

[node name="Address" type="HBoxContainer" parent="UI/JoinGame/VBox"]
layout_mode = 2

[node name="IP" type="TextEdit" parent="UI/JoinGame/VBox/Address"]
custom_minimum_size = Vector2(100, 36)
layout_mode = 2
size_flags_horizontal = 3
text = "127.0.0.1"
placeholder_text = "e.g 127.0.0.1"
emoji_menu_enabled = false

[node name="Port" type="TextEdit" parent="UI/JoinGame/VBox/Address"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
size_flags_horizontal = 3
text = "9752"
placeholder_text = "e.g 9752"
emoji_menu_enabled = false

[node name="Separator" type="Control" parent="UI/JoinGame/VBox"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Join" type="Button" parent="UI/JoinGame/VBox"]
layout_mode = 2
disabled = true
text = "Join"

[node name="ErrorLabel" type="Label" parent="UI/JoinGame/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)

[node name="Lobby" type="PanelContainer" parent="UI"]
visible = false
layout_mode = 0
offset_left = 515.0
offset_top = 173.0
offset_right = 765.0
offset_bottom = 446.0

[node name="Control" type="Control" parent="UI/Lobby"]
layout_mode = 2

[node name="Leave" type="Button" parent="UI/Lobby/Control"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 53.0
offset_bottom = 39.0
text = "Leave"

[node name="VBox" type="VBoxContainer" parent="UI/Lobby"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Title" type="Label" parent="UI/Lobby/VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Lobby"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerListLabel" type="Label" parent="UI/Lobby/VBox"]
layout_mode = 2
text = "Players"

[node name="PlayerList" type="ItemList" parent="UI/Lobby/VBox"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
allow_search = false
item_count = 1
item_0/text = "hejhej"

[node name="Start" type="Button" parent="UI/Lobby/VBox"]
layout_mode = 2
text = "Start game"

[node name="WaitingLabel" type="Label" parent="UI/Lobby/VBox"]
layout_mode = 2
text = "Waiting for server to start"

[node name="Separator" type="Control" parent="UI/Lobby/VBox"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="ErrorDialog" type="AcceptDialog" parent="UI"]
auto_translate_mode = 1
initial_position = 1

[connection signal="pressed" from="UI/MainMenu/VBox/HostGame" to="UI" method="set_view" binds= ["HostGame"]]
[connection signal="pressed" from="UI/MainMenu/VBox/JoinGame" to="UI" method="set_view" binds= ["JoinGame"]]
[connection signal="pressed" from="UI/HostGame/Control/Back" to="UI" method="set_view" binds= ["MainMenu"]]
[connection signal="pressed" from="UI/HostGame/VBox/Host" to="UI" method="_on_host_pressed"]
[connection signal="pressed" from="UI/JoinGame/Control/Back" to="UI" method="set_view" binds= ["MainMenu"]]
[connection signal="pressed" from="UI/JoinGame/VBox/Join" to="UI" method="_on_join_pressed"]
[connection signal="pressed" from="UI/Lobby/Control/Leave" to="UI" method="_on_lobby_leave_pressed"]
[connection signal="pressed" from="UI/Lobby/VBox/Start" to="UI" method="_on_start_pressed"]
